tests/snapshots/examples_fixtures/type_system__failing__51_strict_public_missing_param_annotation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/51_strict_public_missing_param_annotation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
