tests/snapshots/examples_fixtures/type_system__failing__52_strict_public_missing_return_annotation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/52_strict_public_missing_return_annotation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
