tests/snapshots/examples_fixtures/type_system__failing__53_strict_public_effectful_missing_with.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/53_strict_public_effectful_missing_with.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
