tests/snapshots/examples_fixtures/type_system__failing__57_strict_entry_path_parity.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/57_strict_entry_path_parity.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
