tests/snapshots/examples_fixtures/type_system__failing__58_strict_public_underscore_missing_annotation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/58_strict_public_underscore_missing_annotation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
