tests/snapshots/examples_fixtures/type_system__failing__60_public_hof_contract_unsupported.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/60_public_hof_contract_unsupported.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
