tests/snapshots/examples_fixtures/type_system__failing__61_strict_generic_unresolved_boundary.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/61_strict_generic_unresolved_boundary.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
