tests/snapshots/examples_fixtures/type_system__failing__66_module_constructor_not_public_api.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/66_module_constructor_not_public_api.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `TypeSystem.GenericResultTree` to import.

  examples/type_system/failing/66_module_constructor_not_public_api.flx:4:1
  |
4 | import TypeSystem.GenericResultTree
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.GenericResultTree.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.GenericResultTree` under roots: examples/type_system/failing, src (imported from examples/type_system/failing/66_module_constructor_not_public_api.flx).
== stdout ==
<not executed>
